--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,6 +6,12 @@ jobs:
     container:
       image: kirschbaumdevelopment/laravel-test-runner:8.1
 
+    services:
+      mysql:
+        image: memcached:1.6
+        ports:
+          - 11211:11211
+
     steps:
     - uses: actions/checkout@v1
       with:
